[JAPICMP-307] Add add-opens to fix build under jdkk17